adds bootstrap experimentation

--- a/index.html
+++ b/index.html
@@ -14,50 +14,72 @@
 
 <body>
 
-    <header>
-        <div>
-            <h1> NuCamp </h1>
-            <h2> a better way to camp </h2>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1> NuCamp </h1>
+                    <h2> a better way to camp </h2>
+                </div>
+            </div>
         </div>
     </header>
 
-    <div>
-        <h2>Discover & Review</h2>
-        <h3> Our Campsites </h3>
-        <p> Explore our bourgeoning database of curated campsites. Feel free to review if you've visted! </p>
-    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 order-sm-last col-md-3">
+                <h2>Discover & Review</h2>
+            </div>
+            <div class="col">
+                <h3> Our Campsites </h3>
+                <p> Explore our bourgeoning database of curated campsites. Feel free to review if you've visted! </p>
+            </div>
+        </div>
 
-    <div>
-        <h2>Featured Campsites</h2>
-        <h3> Java Falls </h3>
-        <p> Deep in the OOP Forest lies naturally lit cavern where latte-colored water pours into a warm soothing pond.</p>
-    </div>
+        <div class="row">
+            <div class="col-sm-4 col-md-3">
+                <h2>Featured Campsites</h2>
+            </div>
+            <div class="col">
+                <h3> Java Falls </h3>
+                <p> Deep in the OOP Forest lies naturally lit cavern where latte-colored water pours into a warm soothing pond.</p>
+            </div>
+        </div>
 
-    <div>
-        <h2>Our Community Partners</h2>
-        <h3>Node Bro Tours</h3>
-        <p> See and photograph everything the park has to offer with Node brothers, Nathan and Mickey. They've been rangers in these parks for almost 2 decades, so they'll steer you in the right direction! </p>
+        <div class="row">
+            <div class="col-sm-4 order-sm-last col-md-3">
+                <h2>Our Community Partners</h2>
+            </div>
+            <div class="col">
+                <h3>Node Bro Tours</h3>
+                <p> See and photograph everything the park has to offer with Node brothers, Nathan and Mickey. They've been rangers in these parks for almost 2 decades, so they'll steer you in the right direction! </p>
+            </div>
+        </div>
     </div>
 
     <footer>
-        <div>
-            <h5> Links </h5>
-            <ul>
-                <li> <a href="#"> Home </a> </li>
-                <li> <a href="#"> About </a></li>
-                <li> <a href="#"> Sites </a></li>
-                <li> <a href="#"> Contact </a></li>
-            </ul>
-        </div>
-        <div>
-            <h5> Social </h5>
-            <a href="http://instagram.com/"> Instagram </a>
-            <a href="http://facebook.com/"> Facebook </a>
-            <a href="http://twitter.com/"> Twitter </a>
-            <a href="http://youtube.com"> YouTube </a>
-        </div>
-        <div>
-            Tel: 1-203-546-1983 <br /> Email: campsites@nucamp.com
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-sm-2 offset-1">
+                    <h5> Links </h5>
+                    <ul class="list-unstyled">
+                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="#"> About </a> </li>
+                        <li> <a href="#"> Sites </a> </li>
+                        <li> <a href="#"> Contact </a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-6 col-sm-5">
+                <h5> Social </h5>
+                <a href="http://instagram.com/"> Instagram </a>
+                <a href="http://facebook.com/"> Facebook </a>
+                <a href="http://twitter.com/"> Twitter </a>
+                <a href="http://youtube.com"> YouTube </a>
+            </div>
+            <div class="col-sm-4">
+                Tel: 1-203-546-1983 <br /> Email: campsites@nucamp.com
+            </div>
         </div>
     </footer>
 
