--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
+    <!-- Additional CSS goes after bootstrap -->
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title> NuCamp: A Better Way to Camp </title>
 </head>
 
 <body>
 
-    <header class="jumbotron">
+    <header class="jumbotron jumbotron-fluid">
+        <!--fluid rounds off the edges-->
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -25,34 +31,50 @@
         </div>
     </header>
 
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <span class="navbar-toggler-icon">  </span>
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"> <a class="nav-link" href="#"> Home </a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="aboutus.html"> About </a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#"> Sites </a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#"> Contact </a> </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
-        <div class="row">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2>Discover & Review</h2>
+        <div class="row row-content align-items-center">
+            <div class="col-sm-4 col-md-3">
+                <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
                 <h3> Our Campsites </h3>
-                <p> Explore our bourgeoning database of curated campsites. Feel free to review if you've visted! </p>
+                <p class="d-none d-sm-block"> Explore our bourgeoning database of curated campsites. Feel free to review if you've visted! </p>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
-                <h2>Featured Campsites</h2>
+                <h2 class="text-sm-right">Featured Campsites</h2>
             </div>
             <div class="col">
                 <h3> Java Falls </h3>
-                <p> Deep in the OOP Forest lies naturally lit cavern where latte-colored water pours into a warm soothing pond.</p>
+                <p class="d-none d-sm-block"> Deep in the OOP Forest lies naturally lit cavern where latte-colored water pours into a warm soothing pond.</p>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-4 order-sm-last col-md-3">
-                <h2>Our Community Partners</h2>
+        <div class="row row-content align-items-center">
+            <div class="col-sm-4 col-md-3">
+                <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
             <div class="col">
                 <h3>Node Bro Tours</h3>
-                <p> See and photograph everything the park has to offer with Node brothers, Nathan and Mickey. They've been rangers in these parks for almost 2 decades, so they'll steer you in the right direction! </p>
+                <p class="d-none d-sm-block"> See and photograph everything the park has to offer with Node brothers, Nathan and Mickey. They've been rangers in these parks for almost 2 decades, so they'll steer you in the right direction! </p>
             </div>
         </div>
     </div>
@@ -64,21 +86,22 @@
                     <h5> Links </h5>
                     <ul class="list-unstyled">
                         <li> <a href="#"> Home </a> </li>
-                        <li> <a href="#"> About </a> </li>
+                        <li> <a href="aboutus.html"> About </a> </li>
                         <li> <a href="#"> Sites </a> </li>
                         <li> <a href="#"> Contact </a> </li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-6 col-sm-5">
-                <h5> Social </h5>
-                <a href="http://instagram.com/"> Instagram </a>
-                <a href="http://facebook.com/"> Facebook </a>
-                <a href="http://twitter.com/"> Twitter </a>
-                <a href="http://youtube.com"> YouTube </a>
-            </div>
-            <div class="col-sm-4">
-                Tel: 1-203-546-1983 <br /> Email: campsites@nucamp.com
+
+                <div class="col-6 col-sm-5 text-center">
+                    <h5> Social </h5>
+                    <a href="http://instagram.com/"> Instagram </a>
+                    <a href="http://facebook.com/"> Facebook </a>
+                    <a href="http://twitter.com/"> Twitter </a>
+                    <a href="http://youtube.com"> YouTube </a>
+                </div>
+                <div class="col-sm-4 text-center">
+                    Tel: 1-203-546-1983 <br /> Email: campsites@nucamp.com
+                </div>
             </div>
         </div>
     </footer>
