--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <title> NuCamp: A Better Way to Camp </title>
 </head>
 
@@ -41,7 +42,7 @@
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"> <i class="fa fa-home fa-lg"> </i> Home </a>
+                        <a class="nav-link" href="index.html"> <i class="fa fa-home fa-lg"> </i> Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutus.html"> <i class="fa fa-info fa-lg"> </i> About </a>
@@ -50,7 +51,7 @@
                         <a class="nav-link" href="#"> <i class="fa fa-list fa-lg"> </i> Sites </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> <i class="fa fa-address-card fa-lg"> </i> Contact </a>
+                        <a class="nav-link" href="contactus.html"> <i class="fa fa-address-card fa-lg"> </i> Contact </a>
                     </li>
                 </ul>
             </div>
@@ -95,23 +96,23 @@
                 <div class="col-4 col-sm-2 offset-1">
                     <h5> Links </h5>
                     <ul class="list-unstyled">
-                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="index.html"> Home </a> </li>
                         <li> <a href="aboutus.html"> About </a> </li>
                         <li> <a href="#"> Sites </a> </li>
-                        <li> <a href="#"> Contact </a> </li>
+                        <li> <a href="contactus.html"> Contact </a> </li>
                     </ul>
                 </div>
 
                 <div class="col-6 col-sm-5 text-center">
                     <h5> Social </h5>
-                    <a href="http://instagram.com/"> <i class="fa fa-instagram fa-lg"> </i> Instagram </a>
-                    <a href="http://facebook.com/"> <i class="fa fa-facebook fa-lg"> </i> Facebook </a>
-                    <a href="http://twitter.com/"> <i class="fa fa-twitter fa-lg"> </i>Twitter </a>
-                    <a href="http://youtube.com"> <i class="fa fa-youtube"> </i>YouTube </a>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <i class="fa fa-phone fa-lg text-primary"> </i> Tel: 1-203-546-1983 <br />
-                    <i class="fa fa-envelope fa-lg text-primary"> </i> Email: campsites@nucamp.com
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"> <i class="fa fa-phone"> </i> 1-206-555-1234 </a> <br />
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i class="fa fa-envelope-o"> </i> campsites@nucamp.co </a>
                 </div>
             </div>
         </div>
