--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <h1> NuCamp </h1>
                     <h2> a better way to camp </h2>
                 </div>
+                <div class="col-md-4 col-xl-2">
+                    <a href="#reserveForm" role="button" class="btn btn-info btn-lg mt-4"> Reserve Campsite</a>
+                </div>
             </div>
         </div>
     </header>
@@ -78,32 +81,77 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
+        <div class="row row-content  align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2 class="text-sm-right">Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3> Java Falls </h3>
-                <p class="d-none d-sm-block"> Deep in the OOP Forest lies naturally lit cavern where latte-colored water pours into a warm soothing pond.</p>
+                <div class="media">
+                    <div class="media-body align-self-center">
+                        <h3> React Lake Campground </h3>
+                        <p class="d-none d-sm-block"> Nested in the foothills of the Chrome Mountains, this Campground on the shoes of the pristine React Lake is a favorite for fly fishers.</p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="React Lake Campground" />
+                </div>
+            </div>
+
+            <div class="row row-content align-items-center">
+                <div class="col-sm-4 col-md-3">
+                    <h2 class="text-sm-right">Our Community Partners</h2>
+                </div>
+                <div class="col">
+                    <div class="media">
+                        <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
+                        <div class="media-body align-self-center">
+                            <h3>Bootstrap Outfitters</h3>
+                            <p class="d-none d-sm-block"> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <h2 class="text-sm-right">Our Community Partners</h2>
-            </div>
-            <div class="col">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
-                    <div class="media-body align-self-center">
-                        <h3>Bootstrap Outfitters</h3>
-                        <p class="d-none d-sm-block"> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
+        <div class="row row-content">
+            <div class="col-sm-6 mx-auto">
+                <div class="card">
+                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+                    <div class="card-body">
+                        <form id="reserveForm">
+                            <div class="row form-group">
+                                <div class="col-sm-6 col-form-label">
+                                    <label for="numberOfCampers">Number of Campers</label>
+                                </div>
+                                <div class="col">
+                                    <select id="numberOfCampers" class="form-control" name="numCampers">
+                                        <option selected>Select...</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-sm-6 col-form-label">
+                                    <label for="date"> Date </label>
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-3 mx-auto">
+                                    <button type="submit" class="btn btn-primary"> Search </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <footer class="site-footer">
         <div class="container">
             <div class="row">
