--- a/index.html
+++ b/index.html
@@ -33,11 +33,74 @@
                     <h2> a better way to camp </h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <a href="#reserveForm" role="button" class="btn btn-info btn-lg mt-4" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>"> Reserve Campsite </a>
+                    <a role="button" class="btn btn-info btn-lg mt-4" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h3 class="modal-title"> Reserve a Campsite </h3>
+                    <button type="button" class="close" data-dismiss="modal"> &times; </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="row form-group">
+                                <div class="col-sm-6 col-form-label">
+                                    <label for="numberOfCampers">Number of Campers</label>
+                                </div>
+                                <div class="col">
+                                    <select id="numberOfCampers" class="form-control" name="numCampers">
+                                        <option selected>Select...</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-sm-6 col-form-label">
+                                    <label for="date"> Date </label>
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-sm-6 col-form-label">
+                                    <label for="siteType"> Campsite Type </label>
+                                </div>
+                                <div class="col-2">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                              <input type="radio" name="siteType" id="siteTent" value="tent" checked> Tent
+                                            </label>
+                                        <label class="btn btn-info">
+                                              <input type="radio" name="siteType" id="siteRv" value="RV"> RV
+                                            </label>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"> Cancel </button>
+                            <button type="submit" class="btn btn-primary"> Search </button>
+                        </div>
+                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
     <!--For adding the icons in the navbar, you can use either <i>(what Font Awesome prefers for brevity) or <span> (what is more semantically correct) -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
@@ -147,6 +210,14 @@
                         <span class="carousel-control-next-icon"> </span>
                         <span class="sr-only"> Next </span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                            <i class="fa fa-pause"> </i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <i class="fa fa-play"> </i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -195,47 +266,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row row-content">
-            <div class="col-sm-6 mx-auto">
-                <div class="card">
-                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-                    <div class="card-body">
-                        <form id="reserveForm">
-                            <div class="row form-group">
-                                <div class="col-sm-6 col-form-label">
-                                    <label for="numberOfCampers">Number of Campers</label>
-                                </div>
-                                <div class="col">
-                                    <select id="numberOfCampers" class="form-control" name="numCampers">
-                                        <option selected>Select...</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col-sm-6 col-form-label">
-                                    <label for="date"> Date </label>
-                                </div>
-                                <div class="col-sm-6">
-                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col-3 mx-auto">
-                                    <button type="submit" class="btn btn-primary"> Search </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <footer class="site-footer">
         <div class="container">
@@ -272,11 +302,21 @@
     </script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
     </script>
+
     <script>
         $(function() {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+            $(".carousel").carousel({
+                interval: 2000
+            });
+            $("#carouselPause").click(function() {
+                $(".carousel").carousel("pause");
+            });
+            $("#carouselPlay").click(function() {
+                $(".carousel").carousel("cycle");
+            });
+        });
     </script>
+
 </body>
 
 </html>
