--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2> a better way to camp </h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <a role="button" class="btn btn-info btn-lg mt-4" type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+                    <a role="button" class="btn btn-info btn-lg mt-4" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -74,33 +74,31 @@
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <div class="col-sm-6 col-form-label">
-                                    <label for="siteType"> Campsite Type </label>
-                                </div>
+                                <label class="col-sm-6 col-form-label"> Campsite Type </label>
                                 <div class="col-2">
                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                         <label class="btn btn-success active">
-                                              <input type="radio" name="siteType" id="siteTent" value="tent" checked> Tent
-                                            </label>
+                                            <input type="radio" name="siteType" id="siteTent" value="tent" checked> Tent
+                                        </label>
                                         <label class="btn btn-info">
-                                              <input type="radio" name="siteType" id="siteRv" value="RV"> RV
-                                            </label>
+                                            <input type="radio" name="siteType" id="siteRv" value="RV"> RV
+                                        </label>
                                     </div>
                                 </div>
                             </div>
+                            <div class="row form-group">
+                                <div class="col">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal"> Cancel </button>
+                                    <button type="submit" class="btn btn-primary"> Search </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="row form-group">
-                        <div class="col">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal"> Cancel </button>
-                            <button type="submit" class="btn btn-primary"> Search </button>
-                        </div>
-                    </div>
-                    </form>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+
 
     <!--For adding the icons in the navbar, you can use either <i>(what Font Awesome prefers for brevity) or <span> (what is more semantically correct) -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
@@ -210,14 +208,9 @@
                         <span class="carousel-control-next-icon"> </span>
                         <span class="sr-only"> Next </span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
-                            <i class="fa fa-pause"> </i>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <i class="fa fa-play"> </i>
-                        </button>
-                    </div>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <i class="fa fa-pause"> </i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -308,11 +301,16 @@
             $(".carousel").carousel({
                 interval: 2000
             });
-            $("#carouselPause").click(function() {
-                $(".carousel").carousel("pause");
-            });
-            $("#carouselPlay").click(function() {
-                $(".carousel").carousel("cycle");
+            $("#carouselButton").click(function() {
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                    $(".carousel").carousel("pause");
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                } else {
+                    $(".carousel").carousel("cycle");
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause");
+                }
             });
         });
     </script>
