--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Additional CSS goes after bootstrap -->
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <title> NuCamp: A Better Way to Camp </title>
