adds build tools and scripts

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,15 +6,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS goes first -->
+    <!-- build:css css/main.css-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
-    <!-- Additional CSS goes after bootstrap -->
-
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
     <title> NuCamp: A Better Way to Camp </title>
 </head>
 
@@ -232,12 +230,16 @@
         </div>
     </footer>
     <!-- jquery must come first, then Popper.js, then bootstrap -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.js">
     </script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js">
     </script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
     </script>
+    <script src="js/scripts.js">
+    </script>
+    <!-- endbuild -->
 </body>
 
 </html>
