--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <meta charset="utf-8" />
     <title> NuCamp: A Better Way to Camp </title>
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS goes first -->
+    <!-- build:css css/main.css-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
-    <!-- Additional CSS goes after bootstrap -->
-
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+
     <title> NuCamp: A Better Way to Camp </title>
 </head>
 
@@ -289,31 +290,17 @@
     </footer>
 
     <!-- jquery must come first, then Popper.js, then bootstrap -->
+
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.js">
     </script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js">
     </script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
     </script>
-
-    <script>
-        $(function() {
-            $(".carousel").carousel({
-                interval: 2000
-            });
-            $("#carouselButton").click(function() {
-                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
-                    $(".carousel").carousel("pause");
-                    $("#carouselButton").children("i").removeClass("fa-pause");
-                    $("#carouselButton").children("i").addClass("fa-play");
-                } else {
-                    $(".carousel").carousel("cycle");
-                    $("#carouselButton").children("i").removeClass("fa-play");
-                    $("#carouselButton").children("i").addClass("fa-pause");
-                }
-            });
-        });
+    <script src="js/scripts.js">
     </script>
+    <!-- endbuild -->
 
 </body>
 
